@@ -29,15 +29,15 @@ public class CompetitionRankingService {
     }
 
     public byte[] getCompetitionRankingAsPdf(Long competitionId) {
-        return new CompetitionRankingReport(getCompetitionRanking(competitionId), Locale.of("de", "CH")).create();
+        return new CompetitionRankingReport(getCompetitionRanking(competitionId), new Locale("de", "CH")).create();
     }
 
     public byte[] getDiplomasAsPdf(Long competitionId) {
-        return new DiplomaReport(getCompetitionRanking(competitionId), getLogo(competitionId), Locale.of("de", "CH")).create();
+        return new DiplomaReport(getCompetitionRanking(competitionId), getLogo(competitionId), new Locale("de", "CH")).create();
     }
 
     public byte[] getEventRankingAsPdf(Long competitionId) {
-        return new EventsRankingReport(getEventsRanking(competitionId), Locale.of("de", "CH")).create();
+        return new EventsRankingReport(getEventsRanking(competitionId), new Locale("de", "CH")).create();
     }
 
     public CompetitionRankingData getCompetitionRanking(Long competitionId) {
