@@ -27,7 +27,7 @@ public class SeriesRankingService {
     }
 
     public byte[] getSeriesRankingAsPdf(Long seriesId) {
-        return new SeriesRankingReport(getSeriesRanking(seriesId), Locale.of("de", "CH")).create();
+        return new SeriesRankingReport(getSeriesRanking(seriesId), new Locale("de", "CH")).create();
     }
 
     public SeriesRankingData getSeriesRanking(Long seriesId) {
@@ -75,7 +75,7 @@ public class SeriesRankingService {
     }
 
     public byte[] getClubRankingAsPdf(Long seriesId) {
-        return new ClubRankingReport(getClubRanking(seriesId), Locale.of("de", "CH")).create();
+        return new ClubRankingReport(getClubRanking(seriesId), new Locale("de", "CH")).create();
     }
 
     public ClubRankingData getClubRanking(Long seriesId) {
